[package]
name = "simple-hab-backend"
version = "0.1.0"
authors = ["Shu Gen <gen_shu@caddi.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.22"
rusqlite = { version = "0.24", features = ["bundled"] }
r2d2 = "0.8.9"
r2d2_sqlite = "0.17.0"
askama = "0.10.5"
